# ider

./: Dockerfile  docker-compose.yml  pyproject.toml
scripts/: jsonify.py  upload_segments.py
src/ider/: runner.py
src/ider/clients/: acoustid_client.py  beets_client.py
src/ider/config/: config.base.yaml  config.dev.yaml
src/ider/controllers/: db_controller.py  ffmpeg_controller.py  fpcalc_controller.py
src/ider/factories/: create_aiohttp_session.py  create_db.py
src/ider/models/: ider_track.py  match.py
src/ider/orchestrators/: match_orchestrator.py
src/ider/routers/: segment_api.py
src/ider/utils/: init_logger.py  registration.py  run_sub_cmd.py
